--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
         // Dummy locations data
         const locations = [
-            { lat: 37.7749, lng: -122.4194, name: "San Francisco" },
-            { lat: 34.0522, lng: -118.2437, name: "Los Angeles" },
-            { lat: 40.7128, lng: -74.0060, name: "New York" }
+            { lat: 10.850516, lng: 76.271080, name: "Kerala" },,
+            //{ lat: 34.0522, lng: -118.2437, name: "Los Angeles" },
+           // { lat: 40.7128, lng: -74.0060, name: "New York" }
         ];
 
         // Function to initialize Google Maps
