--- a/index.html
+++ b/index.html
@@ -101,7 +101,12 @@
 
         // Dummy locations data
         const locations = [
-            { lat: 10.850516, lng: 76.271080, name: "Kerala" },,
+            { lat: 9.9312, lng: 76.2673, name: "Kochi (Cochin)" },
+            { lat: 8.5241, lng: 76.9366, name: "Thiruvananthapuram (Trivandrum)" },
+            { lat: 11.2588, lng: 75.7804, name: "Kozhikode (Calicut)"},
+            { lat: 9.4981, lng: 76.3388 , name: "Alappuzha (Alleppey)"},
+            { lat: 10.0889, lng: 77.0595, name: "Munnar" },
+            { lat: 11.6850, lng: 76.1307,name: "Wayanad"}
             //{ lat: 34.0522, lng: -118.2437, name: "Los Angeles" },
            // { lat: 40.7128, lng: -74.0060, name: "New York" }
         ];
