--- a/index.html
+++ b/index.html
@@ -5,7 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthcare Management System</title>
     <style>
-        /* Your existing styles here */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .header {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+        .search-bar {
+            width: 50%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+        .section {
+            width: 80%;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            margin-bottom: 20px;
+        }
+        .section h2 {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px;
+            margin: 0;
+        }
+        .notification-list {
+            list-style: none;
+            padding: 10px;
+            margin: 0;
+            max-height: 300px;
+            overflow-y: auto;
+        }
+        .notification-item {
+            padding: 8px 0;
+            border-bottom: 1px solid #ddd;
+        }
+        #map {
+            height: 400px;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -46,7 +101,12 @@
 
         // Dummy locations data
         const locations = [
-            // Your existing locations here
+            { lat: 9.9312, lng: 76.2673, name: "Kochi (Cochin)" },
+            { lat: 8.5241, lng: 76.9366, name: "Thiruvananthapuram (Trivandrum)" },
+            { lat: 11.2588, lng: 75.7804, name: "Kozhikode (Calicut)"},
+            { lat: 9.4981, lng: 76.3388 , name: "Alappuzha (Alleppey)"},
+            { lat: 10.0889, lng: 77.0595, name: "Munnar" },
+            { lat: 11.6850, lng: 76.1307,name: "Wayanad"}
         ];
 
         function initMap() {
