--- a/index.html
+++ b/index.html
@@ -80,11 +80,20 @@
     </div>
 
     <script>
-        // Dummy live notifications data
         const notifications = [
             "Possible outbreak of flu reported in city A.",
             "Increase in dengue cases in region B.",
             "Alert: Cholera outbreak in village C."
+        ];
+
+        // Dummy locations data
+        const locations = [
+            { lat: 9.9312, lng: 76.2673, name: "Kochi (Cochin)" },
+            { lat: 8.5241, lng: 76.9366, name: "Thiruvananthapuram (Trivandrum)" },
+            { lat: 11.2588, lng: 75.7804, name: "Kozhikode (Calicut)"},
+            { lat: 9.4981, lng: 76.3388 , name: "Alappuzha (Alleppey)"},
+            { lat: 10.0889, lng: 77.0595, name: "Munnar" },
+            { lat: 11.6850, lng: 76.1307, name: "Wayanad"}
         ];
 
         // Function to display live notifications
