--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h1>HEALTH SUPPORT</h1>
     </div>
     <div class="container">
-        <input type="text" class="search-bar" placeholder="Search for districts in a state...">
+        <input type="text" class="search-bar" placeholder="Search for districts in a state..." id="districtSearch">
         <div class="section" id="notifications">
             <h2>Live Notifications</h2>
             <ul class="notification-list" id="notificationList"></ul>
@@ -96,7 +96,6 @@
             { lat: 11.6850, lng: 76.1307, name: "Wayanad"}
         ];
 
-        // Function to display live notifications
         function displayNotifications() {
             const notificationList = document.getElementById('notificationList');
             notificationList.innerHTML = '';
@@ -108,79 +107,85 @@
             });
         }
 
-let map;
-let service;
-let markers = [];
+        let map;
+        let service;
+        let markers = [];
 
-function initMap() {
-  const center = { lat: 40.7128, lng: -74.0060 }; // Change this to the center of the area you want to search
+        function initMap() {
+            const center = { lat: 9.9312, lng: 76.2673 }; // Change this to the center of the area you want to search
 
-  map = new google.maps.Map(document.getElementById("map"), {
-    center: center,
-    zoom: 12,
-  });
-
-  // Create a PlacesService instance to perform nearby searches
-  service = new google.maps.places.PlacesService(map);
-
-  // Add an event listener to the district search bar
-  document.getElementById("districtSearch").addEventListener("input", function () {
-    const district = this.value;
-    if (district) {
-      // Perform a nearby search for hospitals in the specified district
-      searchHospitalsInDistrict(district);
-    } else {
-      // Clear existing markers
-      markers.forEach(marker => marker.setMap(null));
-      markers = [];
-    }
-  });
-}
-
-function searchHospitalsInDistrict(district) {
-  // Use the Places Library to geocode the district name
-  const geocoder = new google.maps.Geocoder();
-  geocoder.geocode({ address: district }, function (results, status) {
-    if (status === "OK") {
-      const districtLocation = results[0].geometry.location;
-
-      // Perform a nearby search for hospitals within a 5km radius of the district
-      const request = {
-        location: districtLocation,
-        radius: "5000",
-        type: ["hospital"],
-      };
-
-      service.nearbySearch(request, function (results, status) {
-        if (status === google.maps.places.PlacesServiceStatus.OK) {
-          // Clear existing markers
-          markers.forEach(marker => marker.setMap(null));
-          markers = [];
-
-          // Add markers for each hospital
-          results.forEach(function (result) {
-            const marker = new google.maps.Marker({
-              position: result.geometry.location,
-              map: map,
-              title: result.name,
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: center,
+                zoom: 12,
             });
-            markers.push(marker);
-          });
 
-          // Zoom in to fit all markers
-          const bounds = new google.maps.LatLngBounds();
-          markers.forEach(function (marker) {
-            bounds.extend(marker.getPosition());
-          });
-          map.fitBounds(bounds);
+            // Create a PlacesService instance to perform nearby searches
+            service = new google.maps.places.PlacesService(map);
+
+            // Add an event listener to the district search bar
+            document.getElementById("districtSearch").addEventListener("input", function () {
+                const district = this.value;
+                if (district) {
+                    // Perform a nearby search for hospitals in the specified district
+                    searchHospitalsInDistrict(district);
+                } else {
+                    // Clear existing markers
+                    markers.forEach(marker => marker.setMap(null));
+                    markers = [];
+                }
+            });
         }
-      });
-    } else {
-      console.error("Geocode was not successful: " + status);
-    }
-  });
-}
+
+        function searchHospitalsInDistrict(district) {
+            // Use the Places Library to geocode the district name
+            const geocoder = new google.maps.Geocoder();
+            geocoder.geocode({ address: district }, function (results, status) {
+                if (status === "OK") {
+                    const districtLocation = results[0].geometry.location;
+
+                    // Perform a nearby search for hospitals within a 5km radius of the district
+                    const request = {
+                        location: districtLocation,
+                        radius: "5000",
+                        type: ["hospital"],
+                    };
+
+                    service.nearbySearch(request, function (results, status) {
+                        if (status === google.maps.places.PlacesServiceStatus.OK) {
+                            // Clear existing markers
+                            markers.forEach(marker => marker.setMap(null));
+                            markers = [];
+
+                            // Add markers for each hospital
+                            results.forEach(function (result) {
+                                const marker = new google.maps.Marker({
+                                    position: result.geometry.location,
+                                    map: map,
+                                    title: result.name,
+                                });
+                                markers.push(marker);
+                            });
+
+                            // Zoom in to fit all markers
+                            const bounds = new google.maps.LatLngBounds();
+                            markers.forEach(function (marker) {
+                                bounds.extend(marker.getPosition());
+                            });
+                            map.fitBounds(bounds);
+                        }
+                    });
+                } else {
+                    console.error("Geocode was not successful: " + status);
+                }
+            });
+        }
+
+        // Function to display live notifications and initialize map when the page loads
+        window.onload = function () {
+            displayNotifications();
+            initMap(); // Call initMap directly
+        };
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPWdAqonjOeNGv3HplPpBEkSltrv9xSk4&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPWdAqonjOeNGv3HplPpBEkSltrv9xSk4&libraries=places&callback=initMap" async defer></script>
 </body>
 </html>
