--- a/login.html
+++ b/login.html
@@ -3,75 +3,189 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="karthu.css"/>
+    <title>Healthcare Management System</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .header {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+        .search-bar {
+            width: 50%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+        .section {
+            width: 80%;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            margin-bottom: 20px;
+        }
+        .section h2 {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px;
+            margin: 0;
+        }
+        .notification-list {
+            list-style: none;
+            padding: 10px;
+            margin: 0;
+            max-height: 300px;
+            overflow-y: auto;
+        }
+        .notification-item {
+            padding: 8px 0;
+            border-bottom: 1px solid #ddd;
+        }
+        #map {
+            height: 400px;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-
-    <h1>Login Page</h1>
-
-    <div id="loginForm">
-        <h2>Login</h2>
-        <label for="username">Username:</label>
-        <input type="text" id="username" required>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" required>
-        <br>
-        <button onclick="login()">Login</button>
+    <div class="header">
+        <h1>HHEALTH SUPPORT</h1>
     </div>
-
-    <div id="registerForm" style="display: none;">
-        <h2>Register</h2>
-        <label for="name">Name:</label>
-        <input type="text" id="name" required>
-        <br>
-        <label for="address">Address:</label>
-        <input type="text" id="address" required>
-        <br>
-        <label for="age">Age:</label>
-        <input type="number" id="age" required>
-        <br>
-        <label for="idProof">ID Proof:</label>
-        <input type="text" id="idProof" required>
-        <br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" required>
-        <br>
-        <button onclick="register()">Register</button>
+    <div class="container">
+        <input type="text" class="search-bar" placeholder="Search for districts in a state..." id="districtSearch">
+        <div class="section" id="notifications">
+            <h2>Live Notifications</h2>
+            <ul class="notification-list" id="notificationList"></ul>
+        </div>
+        <div class="section">
+            <h2>Remote Locations Map</h2>
+            <div id="map"></div>
+        </div>
     </div>
 
     <script>
-        function toggleForms() {
-            var loginForm = document.getElementById('loginForm');
-            var registerForm = document.getElementById('registerForm');
+        const notifications = [
+            "Possible outbreak of flu reported in city A.",
+            "Increase in dengue cases in region B.",
+            "Alert: Cholera outbreak in village C."
+        ];
 
-            loginForm.style.display = (loginForm.style.display === 'none') ? 'block' : 'none';
-            registerForm.style.display = (registerForm.style.display === 'none') ? 'block' : 'none';
+        // Dummy locations data
+        const locations = [
+            { lat: 9.9312, lng: 76.2673, name: "Kochi (Cochin)" },
+            { lat: 8.5241, lng: 76.9366, name: "Thiruvananthapuram (Trivandrum)" },
+            { lat: 11.2588, lng: 75.7804, name: "Kozhikode (Calicut)"},
+            { lat: 9.4981, lng: 76.3388 , name: "Alappuzha (Alleppey)"},
+            { lat: 10.0889, lng: 77.0595, name: "Munnar" },
+            { lat: 11.6850, lng: 76.1307, name: "Wayanad"}
+        ];
+
+        function displayNotifications() {
+            const notificationList = document.getElementById('notificationList');
+            notificationList.innerHTML = '';
+            notifications.forEach(notification => {
+                const listItem = document.createElement('li');
+                listItem.textContent = notification;
+                listItem.classList.add('notification-item');
+                notificationList.appendChild(listItem);
+            });
         }
 
-        function login() {
-            var username = document.getElementById('username').value;
-            var password = document.getElementById('password').value;
+        let map;
+        let service;
+        let markers = [];
 
-            // Add your login logic here
-            console.log("Login clicked. Username: " + username + ", Password: " + password);
+        function initMap() {
+            const center = { lat: 9.9312, lng: 76.2673 }; // Change this to the center of the area you want to search
+
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: center,
+                zoom: 12,
+            });
+
+            // Create a PlacesService instance to perform nearby searches
+            service = new google.maps.places.PlacesService(map);
+
+            // Add an event listener to the district search bar
+            document.getElementById("districtSearch").addEventListener("input", function () {
+                const district = this.value;
+                if (district) {
+                    // Perform a nearby search for hospitals in the specified district
+                    searchHospitalsInDistrict(district);
+                } else {
+                    // Clear existing markers
+                    markers.forEach(marker => marker.setMap(null));
+                    markers = [];
+                }
+            });
         }
 
-        function register() {
-            var name = document.getElementById('name').value;
-            var address = document.getElementById('address').value;
-            var age = document.getElementById('age').value;
-            var idProof = document.getElementById('idProof').value;
-            var email = document.getElementById('email').value;
+        function searchHospitalsInDistrict(district) {
+            // Use the Places Library to geocode the district name
+            const geocoder = new google.maps.Geocoder();
+            geocoder.geocode({ address: district }, function (results, status) {
+                if (status === "OK") {
+                    const districtLocation = results[0].geometry.location;
 
-            // Add your registration logic here
-            console.log("Register clicked. Name: " + name + ", Address: " + address + ", Age: " + age + ", ID Proof: " + idProof + ", Email: " + email);
+                    // Perform a nearby search for hospitals within a 5km radius of the district
+                    const request = {
+                        location: districtLocation,
+                        radius: "5000",
+                        type: ["hospital"],
+                    };
+
+                    service.nearbySearch(request, function (results, status) {
+                        if (status === google.maps.places.PlacesServiceStatus.OK) {
+                            // Clear existing markers
+                            markers.forEach(marker => marker.setMap(null));
+                            markers = [];
+
+                            // Add markers for each hospital
+                            results.forEach(function (result) {
+                                const marker = new google.maps.Marker({
+                                    position: result.geometry.location,
+                                    map: map,
+                                    title: result.name,
+                                });
+                                markers.push(marker);
+                            });
+
+                            // Zoom in to fit all markers
+                            const bounds = new google.maps.LatLngBounds();
+                            markers.forEach(function (marker) {
+                                bounds.extend(marker.getPosition());
+                            });
+                            map.fitBounds(bounds);
+                        }
+                    });
+                } else {
+                    console.error("Geocode was not successful: " + status);
+                }
+            });
         }
+
+        // Function to display live notifications and initialize map when the page loads
+        window.onload = function () {
+            displayNotifications();
+            initMap(); // Call initMap directly
+        };
     </script>
-
-    <br>
-    <button onclick="toggleForms()">Switch to Register/Login</button>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPWdAqonjOeNGv3HplPpBEkSltrv9xSk4&libraries=places&callback=initMap" async defer></script>
 </body>
 </html>
