--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <label for="password">Password:</label>
         <input type="password" id="password" required>
         <br>
+        <a href="login.html">
         <button onclick="login()">Login</button>
+        </a>
     </div>
 
     <div id="registerForm" style="display: none;">
