--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <label for="email">Email:</label>
         <input type="email" id="email" required>
         <br>
+        <a href="login.html">
         <button onclick="register()">Register</button>
+        </a>
     </div>
 
     <script>
