--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,41 +8,46 @@
 </head>
 <body>
 
-    <h1>Login Page</h1>
+   
+    <div id="main">
+        <div id="formsContainer">
+            <div id="loginForm">
+                <h2>Login</h2>
+                <label for="username">Username:</label>
+                <input type="text" id="username" required>
+                <br>
+                <label for="password">Password:</label>
+                <input type="password" id="password" required>
+                <br>
+                <button onclick="login()">Login</button>
+            </div>
 
-    <div id="loginForm">
-        <h2>Login</h2>
-        <label for="username">Username:</label>
-        <input type="text" id="username" required>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" required>
-        <br>
-        <a href="login.html">
-        <button onclick="login()">Login</button>
-        </a>
-    </div>
+            <div id="registerForm" style="display: none;">
+                <h2>Register</h2>
+                <label for="name">Name:</label>
+                <input type="text" id="name" required>
+                <br>
+                <label for="address">Address:</label>
+                <input type="text" id="address" required>
+                <br>
+                <label for="age">Age:</label>
+                <input type="number" id="age" required>
+                <br>
+                <label for="idProof">ID Proof:</label>
+                <input type="text" id="idProof" required>
+                <br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" required>
+                <br>
+                <button onclick="register()">Register</button>
+            </div>
 
-    <div id="registerForm" style="display: none;">
-        <h2>Register</h2>
-        <label for="name">Name:</label>
-        <input type="text" id="name" required>
-        <br>
-        <label for="address">Address:</label>
-        <input type="text" id="address" required>
-        <br>
-        <label for="age">Age:</label>
-        <input type="number" id="age" required>
-        <br>
-        <label for="idProof">ID Proof:</label>
-        <input type="text" id="idProof" required>
-        <br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" required>
-        <br>
-        <a href="login.html">
-        <button onclick="register()">Register</button>
-        </a>
+            <button onclick="toggleForms()">Switch to Register/Login</button>
+        </div>
+
+        <div id="imageContainer">
+            <img src="loginn.jpg"  alt="Right Side Image">
+        </div>
     </div>
 
     <script>
@@ -74,9 +79,5 @@
         }
     </script>
 
-    <br>
-    <button onclick="toggleForms()">Switch to Register/Login</button>
-
 </body>
 </html>
-
