--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" required>
                 <br>
+                <a href="login.html">
                 <button onclick="login()">Login</button>
+                </a>
             </div>
 
             <div id="registerForm" style="display: none;">
@@ -39,7 +41,9 @@
                 <label for="email">Email:</label>
                 <input type="email" id="email" required>
                 <br>
+                 <a href="login.html">
                 <button onclick="register()">Register</button>
+                 </a>
             </div>
 
             <button onclick="toggleForms()">Switch to Register/Login</button>
