--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>HHEALTH SUPPORT</h1>
+        <h1>HEALTH SUPPORT</h1>
     </div>
     <div class="container">
         <input type="text" class="search-bar" placeholder="Search for districts in a state..." id="districtSearch">
